--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </section>
       <section class="slide" id="about">
         <h2>About me</h2>
-        <p>Welcome to my profile page. I'm Darshil, a teenager student freelancer. Currently I work only using a phone. Although new to the scene, I'm here to deliver.</p>
+        <p>Welcome to my profile page. I'm Darshil, a student freelancer from India. Although new to the scene, I'm here to deliver. From blog posts to basic web pages, I offer lightweight, mobile-built solutions for small projects. I work solo, and value communication, transparency, deadlines and quality.</p>
       </section>
       <section class="slide" id="services">
         <h2>Services I offer</h2>
