--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </ul>
         <p>I write blogs, articles, scripts for content creation. I also do basic static website design using HTML, CSS and JavaScript — such as making portfolio websites, landing pages etc.</p>
         <p>I can also put your page live on the internet by hosting it using GitHub.</p>
+        <p>Know my service rates<a href="rates.html"> here.</a></p>
       </section>
       <section class="slide" id="tools">
         <h2>Tools used by me</h2>
