--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Portfolio of Darshil B., a content writer and aspiring web developer.">
+    <meta name="description" content="Welcome to the personal site of Darshil B.—a content writer and aspiring web developer. Learn about my background, view service rates, and find detailed info on what I offer.">
     <title>Darshil B.'s Website</title>
     <link rel="stylesheet" href="sheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
