--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="box">
           <h2>Connect with me:</h2>
           <p>My GitHub: <a href="https://github.com/Skilldot" target="_blank" rel="noopener noreferrer">https://github.com/Skilldot</a></p>
+          <p>My Reddit: <a href="https://www.reddit.com/user/Skilldot" target="_blank" rel="noopener noreferrer">https://reddit.com/user/Skilldot</a></p>
         </div>
       </section>
     </main>
